2003-10-01  Brian Warner  <warner@lothar.com>

	* twisted/web/client.py (HTTPDownloader): accept either a filename
	or a file-like object (it must respond to .write and .close, and
	partial requests will not be used with file-like objects). errback
	the deferred if an IOError occurs in .open, .write. or .close,
	usually something like "permission denied" or "file system full".
	Closes issue234.
	* twisted/test/test_webclient.py (WebClientTestCase.write): verify
	that the errback gets called

	* twisted/scripts/trial.py (run): add --until-failure option to
	re-run the test until something fails. Closes issue87.

2003-09-30  Brian Warner  <warner@lothar.com>

	* twisted/test/test_conch.py (testOurServerOpenSSHClient): replace
	reactor.run() with .iterate calls: when using .run, exceptions in
	the server cause a hang.

2003-9-29  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/tap/procmon.py twisted/plugins.tml: remove procmon
	tap. It was crufty and hard to port properly to new application.

2003-09-29  Brian Warner  <warner@lothar.com>

	* twisted/scripts/trial.py (Options.opt_reactor): make trial
	accept the same reactor-name abbreviations as twistd does. Closes
	issue69.
	(top): add test-case-name tag

	* doc/man/trial.1: document the change

2003-09-28  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.8alpha3.

2003-09-27  Cory Dodt <corydodt@yahoo.com>

	* win32/main.aap win32/pyx.x-foo.iss.template win32/README.win32:
	Be nice to people who don't install Python for "All Users" on win32.

2003-9-18  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/application/strports.py twisted/test/test_strports.py: 
	New API/mini-language for defining ports

2003-9-18  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/spider.py: removed, it was unmaintained.

2003-09-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/names/authority.py twisted/test/test_names.py