@@ -1,3 +1,8 @@
+2003-10-03  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* twisted/spread/util.py twisted/test/test_spread.py: Fix issue
+	286
+
 2003-10-01  Brian Warner  <warner@lothar.com>
 
 	* twisted/web/client.py (HTTPDownloader): accept either a filename
